POWR-659 Add my patch to paragraphs module to use Drupal.dialog

--- a/composer.json
+++ b/composer.json
@@ -163,6 +163,9 @@
             "drupal/menu_token": {
                 "2948260 - Tokens not substituted in query string": "https://www.drupal.org/files/issues/2018-09-21/2988939-allow-query-parameters-12.diff"
             },
+            "drupal/paragraphs": {
+                "3028468 - Use Drupal dialog instead of directly using jQuery dialog for add modal": "https://www.drupal.org/files/issues/2019-01-25/3028468_use_drupal_dialog.patch"
+            },
             "drupal/groupmedia": {
                 "3020127 - Empty page when trying to create group node": "https://www.drupal.org/files/issues/2018-12-12/3020127-1.patch"
             }
