POWR-709 update Lightning and Drupal core.

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     },
     "require": {
-        "acquia/lightning": "^3.2",
+        "acquia/lightning": "3.2.4",
         "bower-asset/cropper": "^2.3",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
@@ -48,7 +48,6 @@
         "drupal/console": "^1.0.2",
         "drupal/content_lock": "^1.0@alpha",
         "drupal/copyright_block": "^1.0@RC",
-        "drupal/core": "~8.5",
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/ds": "^3.1",
         "drupal/easy_breadcrumb": "^1.8",
@@ -162,9 +161,6 @@
             },
             "drupal/menu_token": {
                 "2948260 - Tokens not substituted in query string": "https://www.drupal.org/files/issues/2018-09-21/2988939-allow-query-parameters-12.diff"
-            },
-            "drupal/groupmedia": {
-                "3020127 - Empty page when trying to create group node": "https://www.drupal.org/files/issues/2018-12-12/3020127-1.patch"
             }
         },
         "merge-plugin": {
