POWR-666 Add template for popular field and enable on service teaser display mode

--- a/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
@@ -29,6 +29,16 @@ targetEntityType: node
 bundle: city_service
 mode: teaser
 content:
+  field_popular:
+    type: boolean
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
   field_summary:
     type: string
     weight: 1
@@ -42,7 +52,6 @@ hidden:
   field_audience: true
   field_community_actions: true
   field_legacy_path: true
-  field_popular: true
   field_related_content: true
   field_reviewer: true
   field_sections: true
