POWR-496 install fixed block content and config 404

--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -172,3 +172,5 @@ views_data_export: 1.0.0-beta1
 switch_page_theme: 1.0.0
 groupmedia: 2.0.0-alpha2
 field_defaults: 1.0.0-rc2
+hal: 8.6.4
+fixed_block_content: 1.0.0
