--- a/web/sites/default/config/page_manager.page.404.yml
+++ b/web/sites/default/config/page_manager.page.404.yml
@@ -6,7 +6,7 @@ id: '404'
 label: '404'
 description: ''
 use_admin_theme: false
-path: /404
+path: /system/404
 access_logic: and
 access_conditions: {  }
 parameters: {  }
