--- a/web/sites/default/config/page_manager.page_variant.404-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.404-panels_variant-0.yml
@@ -3,13 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
+    - fixed_block_content.fixed_block_content.404_page_botton
+    - fixed_block_content.fixed_block_content.404_page_top
     - page_manager.page.404
     - search_api_page.search_api_page.search_portland_gov
-  content:
-    - 'block_content:basic:180e7160-681b-4d0c-a7cf-273beec450cb'
-    - 'block_content:basic:917a142f-7995-47ce-a553-fe85bb518a58'
   module:
-    - block_content
+    - fixed_block_content
     - panels
     - search_api_page
 id: 404-panels_variant-0
@@ -17,18 +16,6 @@ label: Panels
 variant: panels_variant
 variant_settings:
   blocks:
-    1897eee9-f1c1-4192-9374-c8d3b81ab7fe:
-      id: 'block_content:180e7160-681b-4d0c-a7cf-273beec450cb'
-      label: '404 status code content above search'
-      provider: block_content
-      label_display: '0'
-      status: true
-      info: ''
-      view_mode: full
-      region: content
-      weight: -1
-      uuid: 1897eee9-f1c1-4192-9374-c8d3b81ab7fe
-      context_mapping: {  }
     205d7b14-eed5-44a6-a86c-cc49ed0db0f1:
       id: search_api_page_form_block
       label: 'Search Api Page search block form'
@@ -39,17 +26,25 @@ variant_settings:
       uuid: 205d7b14-eed5-44a6-a86c-cc49ed0db0f1
       search_api_page: search_portland_gov
       context_mapping: {  }
-    3b8299f2-4aba-48c5-bebe-20b490f99381:
-      id: 'block_content:917a142f-7995-47ce-a553-fe85bb518a58'
-      label: '404 status code content below search'
-      provider: block_content
+    a8460c7a-7f8a-4775-b413-0ff326513e0f:
+      id: 'fixed_block_content:404_page_top'
+      label: '404 page top'
+      provider: fixed_block_content
       label_display: '0'
-      status: true
-      info: ''
-      view_mode: full
+      region: content
+      weight: -1
+      uuid: a8460c7a-7f8a-4775-b413-0ff326513e0f
+      view_mode: ''
+      context_mapping: {  }
+    830d7b60-5d86-4363-8acc-64e6f089c142:
+      id: 'fixed_block_content:404_page_botton'
+      label: '404 page botton'
+      provider: fixed_block_content
+      label_display: '0'
       region: content
       weight: 1
-      uuid: 3b8299f2-4aba-48c5-bebe-20b490f99381
+      uuid: 830d7b60-5d86-4363-8acc-64e6f089c142
+      view_mode: ''
       context_mapping: {  }
   id: panels_variant
   uuid: 55fbaf55-ee82-4abe-bf9f-468b40a20b00
