POWR-661 Remove moderation control from event, guide, info, news, notifi

--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -32,17 +32,10 @@ third_party_settings:
       library: layout_discovery/onecol
       disable_css: false
       entity_classes: all_classes
-      settings:
-        classes: {  }
-        wrappers:
-          content: div
-        outer_wrapper: div
-        attributes: ''
-        link_attribute: ''
-        link_custom: ''
+      settings: {  }
     regions:
       content:
-        - content_moderation_control
+        - field_all_day
         - field_summary
         - field_start_date
         - field_start_time
@@ -50,16 +43,20 @@ third_party_settings:
         - field_end_time
         - field_event_location
         - field_body
-        - field_all_day
 id: node.event.default
 targetEntityType: node
 bundle: event
 mode: default
 content:
-  content_moderation_control:
+  field_all_day:
+    type: boolean
     weight: 0
     region: content
-    settings: {  }
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
   field_body:
     weight: 7
@@ -158,6 +155,6 @@ content:
     type: string
     region: content
 hidden:
-  field_all_day: true
+  content_moderation_control: true
   field_legacy_path: true
   links: true
