--- a/web/sites/default/config/core.entity_view_display.node.notification.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.notification.default.yml
@@ -23,11 +23,6 @@ targetEntityType: node
 bundle: notification
 mode: default
 content:
-  content_moderation_control:
-    weight: -20
-    settings: {  }
-    third_party_settings: {  }
-    region: content
   field_action_link:
     weight: 2
     label: above
@@ -56,4 +51,5 @@ content:
     type: string
     region: content
 hidden:
+  content_moderation_control: true
   links: true
