--- a/web/sites/default/config/core.entity_view_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.default.yml
@@ -30,7 +30,6 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - content_moderation_control
         - field_summary
         - field_body
 id: node.guide.default
@@ -38,13 +37,8 @@ targetEntityType: node
 bundle: guide
 mode: default
 content:
-  content_moderation_control:
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_body:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       view_mode: default
@@ -52,16 +46,8 @@ content:
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
     region: content
-  field_reviewer:
-    weight: 3
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_summary:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -97,7 +83,9 @@ content:
     type: string
     region: content
 hidden:
+  content_moderation_control: true
   field_legacy_path: true
   field_related_content: true
+  field_reviewer: true
   field_topics: true
   links: true
