--- a/web/sites/default/config/core.entity_view_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.default.yml
@@ -24,17 +24,9 @@ third_party_settings:
       library: layout_discovery/onecol
       disable_css: false
       entity_classes: all_classes
-      settings:
-        classes: {  }
-        wrappers:
-          content: div
-        outer_wrapper: div
-        attributes: ''
-        link_attribute: ''
-        link_custom: ''
+      settings: {  }
     regions:
       content:
-        - content_moderation_control
         - field_summary
         - field_body
 id: node.information.default
@@ -42,14 +34,9 @@ targetEntityType: node
 bundle: information
 mode: default
 content:
-  content_moderation_control:
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_body:
     type: entity_reference_revisions_entity_view
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       view_mode: default
@@ -57,7 +44,7 @@ content:
     third_party_settings: {  }
     region: content
   field_summary:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -93,6 +80,7 @@ content:
     type: string
     region: content
 hidden:
+  content_moderation_control: true
   field_legacy_path: true
   links: true
   scheduled_publication: true
