--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -28,7 +28,6 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - content_moderation_control
         - field_summary
         - field_body
 id: node.news.default
@@ -36,13 +35,8 @@ targetEntityType: node
 bundle: news
 mode: default
 content:
-  content_moderation_control:
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_body:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       view_mode: default
@@ -51,7 +45,7 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_summary:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -87,6 +81,7 @@ content:
     type: string
     region: content
 hidden:
+  content_moderation_control: true
   field_legacy_path: true
   field_topics: true
   links: true
