POWR-661 Remove moderation control from Media types

--- a/web/sites/default/config/core.entity_view_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.default.yml
@@ -16,14 +16,9 @@ targetEntityType: media
 bundle: image
 mode: default
 content:
-  content_moderation_control:
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   created:
     type: timestamp
-    weight: 3
+    weight: 2
     region: content
     label: inline
     settings:
@@ -33,7 +28,7 @@ content:
     third_party_settings: {  }
   image:
     type: responsive_image
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       responsive_image_style: paragraph_image
@@ -42,13 +37,14 @@ content:
     region: content
   name:
     type: string
-    weight: 1
+    weight: 0
     region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   field_media_in_library: true
   thumbnail: true
   uid: true
