--- a/web/sites/default/config/core.entity_view_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.default.yml
@@ -17,14 +17,9 @@ targetEntityType: media
 bundle: video
 mode: default
 content:
-  content_moderation_control:
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   created:
     type: timestamp
-    weight: 4
+    weight: 3
     region: content
     label: inline
     settings:
@@ -34,7 +29,7 @@ content:
     third_party_settings: {  }
   field_media_video_embed_field:
     type: video_embed_field_video
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       responsive: true
@@ -44,7 +39,7 @@ content:
     third_party_settings: {  }
     region: content
   field_transcript:
-    weight: 3
+    weight: 2
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -53,12 +48,13 @@ content:
   name:
     label: hidden
     type: string
-    weight: 1
+    weight: 0
     settings:
       link_to_entity: false
     third_party_settings: {  }
     region: content
 hidden:
+  content_moderation_control: true
   field_media_in_library: true
   thumbnail: true
   uid: true
