--- a/web/sites/default/config/core.entity_view_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.default.yml
@@ -15,15 +15,10 @@ targetEntityType: media
 bundle: audio
 mode: default
 content:
-  content_moderation_control:
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   created:
     label: inline
     type: timestamp
-    weight: 4
+    weight: 3
     region: content
     settings:
       date_format: medium
@@ -31,7 +26,7 @@ content:
       timezone: ''
     third_party_settings: {  }
   field_media_video_embed_field:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       responsive: true
@@ -42,7 +37,7 @@ content:
     type: video_embed_field_video
     region: content
   field_transcript:
-    weight: 3
+    weight: 2
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -50,13 +45,14 @@ content:
     region: content
   name:
     type: string
-    weight: 1
+    weight: 0
     region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   field_media_in_library: true
   thumbnail: true
   uid: true
