--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -19,15 +19,10 @@ targetEntityType: media
 bundle: document
 mode: default
 content:
-  content_moderation_control:
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   created:
     label: inline
     type: timestamp
-    weight: 4
+    weight: 3
     settings:
       date_format: long
       custom_date_format: ''
@@ -42,7 +37,7 @@ content:
             classes: {  }
     region: content
   field_document:
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       use_description_as_link_text: false
@@ -57,7 +52,7 @@ content:
     type: file_default
     region: content
   field_summary:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -67,12 +62,13 @@ content:
   name:
     label: hidden
     type: string
-    weight: 1
+    weight: 0
     settings:
       link_to_entity: false
     third_party_settings: {  }
     region: content
 hidden:
+  content_moderation_control: true
   field_file_size: true
   field_media_in_library: true
   field_mime_type: true
