POWR-496 fix the dang typo

--- a/web/sites/default/config/page_manager.page_variant.404-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.404-panels_variant-0.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.404_page_botton
+    - fixed_block_content.fixed_block_content.404_page_bottom
     - fixed_block_content.fixed_block_content.404_page_top
     - page_manager.page.404
     - search_api_page.search_api_page.search_portland_gov
@@ -36,14 +36,14 @@ variant_settings:
       uuid: a8460c7a-7f8a-4775-b413-0ff326513e0f
       view_mode: ''
       context_mapping: {  }
-    830d7b60-5d86-4363-8acc-64e6f089c142:
-      id: 'fixed_block_content:404_page_botton'
-      label: '404 page botton'
+    49e12076-6e79-4a05-8534-d0bd3dbb85de:
+      id: 'fixed_block_content:404_page_bottom'
+      label: '404 page bottom'
       provider: fixed_block_content
       label_display: '0'
       region: content
       weight: 1
-      uuid: 830d7b60-5d86-4363-8acc-64e6f089c142
+      uuid: 49e12076-6e79-4a05-8534-d0bd3dbb85de
       view_mode: ''
       context_mapping: {  }
   id: panels_variant
