POWR-667 incremental update, includes config updates to support previous changes and uninstalled portland_html_cleaner module.

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -37,6 +37,7 @@ module:
   datetime: 0
   datetime_range: 0
   dblog: 0
+  devel: 0
   diff: 0
   dropzonejs: 0
   easy_breadcrumb: 0
@@ -70,6 +71,7 @@ module:
   inline_entity_form: 0
   inline_form_errors: 0
   jsonapi: 0
+  kint: 0
   layout_discovery: 0
   lightning_api: 0
   lightning_contact_form: 0
@@ -118,8 +120,8 @@ module:
   pantheon_advanced_page_cache: 0
   path: 0
   portland: 0
-  portland_entity_embed: 0
   portland_legacy_redirects: 0
+  portland_media_embed_classes: 0
   portland_revision_helper: 0
   quickedit: 0
   rabbit_hole: 0
