--- a/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
@@ -6,6 +6,7 @@ dependencies:
     - editor
     - entity_embed
     - htmlpurifier
+    - portland_media_embed_classes
 name: 'Simplified editor with media embed'
 format: simplified_editor_with_media_embed
 weight: 0
@@ -16,7 +17,7 @@ filters:
     status: true
     weight: -50
     settings:
-      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p> <hr> <sup> <sub> <s> <img src alt data-entity-type data-entity-uuid> <a href hreflang !href accesskey id rel target title class=" btn-cta-outline"> <h1> <pre> <i class=""> <drupal-entity data-* title alt data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button>'
+      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p class=""> <hr> <sup> <sub> <s> <img src alt data-entity-type data-entity-uuid> <a href hreflang !href accesskey id rel target title class=" btn-cta-outline"> <h1> <pre> <i class=""> <drupal-entity data-* title alt data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button> <div class="">'
       filter_html_help: true
       filter_html_nofollow: false
   htmlpurifier:
@@ -42,7 +43,7 @@ filters:
     id: filter_align
     provider: filter
     status: true
-    weight: -49
+    weight: -48
     settings: {  }
   filter_autop:
     id: filter_autop
@@ -54,7 +55,7 @@ filters:
     id: filter_caption
     provider: filter
     status: true
-    weight: -48
+    weight: -47
     settings: {  }
   filter_htmlcorrector:
     id: filter_htmlcorrector
@@ -81,3 +82,9 @@ filters:
     weight: -41
     settings:
       filter_url_length: 72
+  filter_portland_embed_classes:
+    id: filter_portland_embed_classes
+    provider: portland_media_embed_classes
+    status: true
+    weight: -49
+    settings: {  }
