--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -173,3 +173,8 @@ switch_page_theme: 1.0.0
 groupmedia: 2.0.0-alpha2
 field_defaults: 1.0.0-rc2
 portland_entity_embed: 0.1.0
+kint: 1.2.0
+portland_html_cleaner: 0.1.0
+portland_media_embed: 0.1.0
+portland_media_embed_classes: 0.1.0
+devel: 1.2.0
