--- a/web/sites/default/config/core.entity_view_display.node.information.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.search_result.yml
@@ -61,6 +61,7 @@ content:
 hidden:
   content_moderation_control: true
   field_body: true
+  field_body_content: true
   field_legacy_path: true
   links: true
   scheduled_publication: true
