POWR-647 Config SearchStax server with config overrides from secret keys

--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -16,7 +16,7 @@ dependencies:
     - field.storage.group.field_shortname_or_acronym
     - field.storage.group.field_summary
     - field.storage.node.field_summary
-    - search_api.server.pantheon
+    - search_api.server.searchstax
 id: full_index
 name: 'Full index'
 description: 'Full index of all content entities on Portland.gov'
@@ -375,4 +375,4 @@ tracker_settings:
 options:
   index_directly: true
   cron_limit: 50
-server: pantheon
+server: searchstax
