--- a/web/sites/default/config/search_api.server.searchstax.yml
+++ b/web/sites/default/config/search_api.server.searchstax.yml
@@ -6,20 +6,22 @@ dependencies:
     - search_api_solr
 id: searchstax
 name: SearchStax
-description: 'Production Solr server hosted by SearchStax.com. Used on Pantheon live environment.'
+description: 'Solr server hosted by SearchStax.com. The key module sets the Solr host, Solr core, and HTTP auth parameters from secret .key files.'
 backend: search_api_solr
 backend_config:
-  connector: standard
+  connector: basic_auth
   connector_config:
     scheme: https
-    host: ss245183-us-west-2-aws.searchstax.com
+    host: null
     port: '443'
     path: /solr
-    core: Production
+    core: null
     timeout: 5
     index_timeout: 5
     optimize_timeout: 10
     commit_within: 1000
+    username: null
+    password: null
     solr_version: ''
     http_method: AUTO
   retrieve_data: false
