--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -72,6 +72,7 @@ module:
   inline_entity_form: 0
   inline_form_errors: 0
   jsonapi: 0
+  key: 0
   layout_discovery: 0
   lightning_api: 0
   lightning_contact_form: 0
