POWR-630 updates to homepage term lists

--- a/web/sites/default/config/views.view.community_actions.yml
+++ b/web/sites/default/config/views.view.community_actions.yml
@@ -6,7 +6,6 @@ dependencies:
     - field.storage.taxonomy_term.field_fontawesome_icon
     - taxonomy.vocabulary.community_actions
   module:
-    - node
     - taxonomy
     - user
 id: community_actions
@@ -35,7 +34,7 @@ display:
         type: views_query
         options:
           disable_sql_rewrite: false
-          distinct: false
+          distinct: true
           replica: false
           query_comment: ''
           query_tags: {  }
@@ -264,10 +263,11 @@ display:
           entity_type: taxonomy_term
           entity_field: vid
           plugin_id: bundle
-        status:
-          id: status
-          table: taxonomy_term_field_data
-          field: status
+          group: 1
+        field_show_on_homepage_value:
+          id: field_show_on_homepage_value
+          table: taxonomy_term__field_show_on_homepage
+          field: field_show_on_homepage_value
           relationship: none
           group_type: group
           admin_label: ''
@@ -287,8 +287,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
           is_grouped: false
           group_info:
             label: ''
@@ -301,8 +299,6 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: taxonomy_term
-          entity_field: status
           plugin_id: boolean
       sorts:
         weight:
@@ -323,21 +319,15 @@ display:
       header: {  }
       footer: {  }
       empty: {  }
-      relationships:
-        reverse__node__field_community_actions:
-          id: reverse__node__field_community_actions
-          table: taxonomy_term_field_data
-          field: reverse__node__field_community_actions
-          relationship: none
-          group_type: group
-          admin_label: field_community_actions
-          required: true
-          entity_type: taxonomy_term
-          plugin_id: entity_reverse
+      relationships: {  }
       arguments: {  }
       display_extenders: {  }
       css_class: ''
-      group_by: true
+      group_by: false
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
