--- a/web/sites/default/config/core.entity_form_display.taxonomy_term.audience.default.yml
+++ b/web/sites/default/config/core.entity_form_display.taxonomy_term.audience.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.audience.field_fontawesome_icon
+    - field.field.taxonomy_term.audience.field_show_on_homepage
     - taxonomy.vocabulary.audience
   module:
     - path
@@ -15,19 +16,26 @@ mode: default
 content:
   description:
     type: text_textarea
-    weight: 2
+    weight: 3
     region: content
     settings:
       placeholder: ''
       rows: 5
     third_party_settings: {  }
   field_fontawesome_icon:
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_show_on_homepage:
+    weight: 1
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
     region: content
   name:
     type: string_textfield
@@ -39,7 +47,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
