--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.default.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.audience.field_fontawesome_icon
+    - field.field.taxonomy_term.audience.field_show_on_homepage
     - taxonomy.vocabulary.audience
   module:
     - ds
@@ -65,5 +66,15 @@ content:
             fis-def-at: false
             fi: false
             fi-def-at: false
+  field_show_on_homepage:
+    weight: 1
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
 hidden:
   field_fontawesome_icon: true
