--- a/web/sites/default/config/views.view.audiences_homepage.yml
+++ b/web/sites/default/config/views.view.audiences_homepage.yml
@@ -6,7 +6,6 @@ dependencies:
     - field.storage.taxonomy_term.field_fontawesome_icon
     - taxonomy.vocabulary.audience
   module:
-    - node
     - taxonomy
     - user
 id: audiences_homepage
@@ -296,10 +295,10 @@ display:
           entity_type: taxonomy_term
           entity_field: vid
           plugin_id: bundle
-        status:
-          id: status
-          table: taxonomy_term_field_data
-          field: status
+        field_show_on_homepage_value:
+          id: field_show_on_homepage_value
+          table: taxonomy_term__field_show_on_homepage
+          field: field_show_on_homepage_value
           relationship: none
           group_type: group
           admin_label: ''
@@ -319,8 +318,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
           is_grouped: false
           group_info:
             label: ''
@@ -333,8 +330,6 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: taxonomy_term
-          entity_field: status
           plugin_id: boolean
       sorts:
         weight:
@@ -355,21 +350,11 @@ display:
       header: {  }
       footer: {  }
       empty: {  }
-      relationships:
-        reverse__node__field_audience:
-          id: reverse__node__field_audience
-          table: taxonomy_term_field_data
-          field: reverse__node__field_audience
-          relationship: none
-          group_type: group
-          admin_label: field_audience
-          required: true
-          entity_type: taxonomy_term
-          plugin_id: entity_reverse
+      relationships: {  }
       arguments: {  }
       display_extenders: {  }
       css_class: ''
-      group_by: true
+      group_by: false
     cache_metadata:
       max-age: -1
       contexts:
