--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -6,7 +6,6 @@ dependencies:
     - field.storage.taxonomy_term.field_fontawesome_icon
     - taxonomy.vocabulary.topics
   module:
-    - node
     - taxonomy
     - text
     - user
@@ -63,7 +62,7 @@ display:
           automatic_width: false
           alignment: horizontal
           col_class_default: false
-          col_class_custom: 'col-sm topic'
+          col_class_custom: 'col-sm-4 topic'
           row_class_default: false
           row_class_custom: row
       row:
@@ -201,7 +200,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<h3><a href="{{ view_taxonomy_term }}">{{ field_fontawesome_icon }} {{ name }}</a></h3>'
+            text: '<h3><a href="{{ view_taxonomy_term }}">{{ name }}</a></h3>'
             make_link: false
             path: ''
             absolute: false
@@ -265,7 +264,7 @@ display:
           group_type: group
           admin_label: ''
           label: ''
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: '<p class="topic-description">{{ description__value__value }}</p>'
@@ -331,53 +330,10 @@ display:
           entity_type: taxonomy_term
           entity_field: vid
           plugin_id: bundle
-        tid_raw:
-          id: tid_raw
-          table: taxonomy_term_field_data
-          field: tid_raw
-          relationship: parent
-          group_type: group
-          admin_label: ''
-          operator: empty
-          value:
-            min: ''
-            max: ''
-            value: ''
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: taxonomy_term
-          plugin_id: numeric
-        status:
-          id: status
-          table: taxonomy_term_field_data
-          field: status
+        field_show_on_homepage_value:
+          id: field_show_on_homepage_value
+          table: taxonomy_term__field_show_on_homepage
+          field: field_show_on_homepage_value
           relationship: none
           group_type: group
           admin_label: ''
@@ -397,8 +353,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
           is_grouped: false
           group_info:
             label: ''
@@ -411,8 +365,6 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: taxonomy_term
-          entity_field: status
           plugin_id: boolean
       sorts:
         weight:
@@ -433,30 +385,11 @@ display:
       header: {  }
       footer: {  }
       empty: {  }
-      relationships:
-        parent:
-          id: parent
-          table: taxonomy_term__parent
-          field: parent_target_id
-          relationship: none
-          group_type: group
-          admin_label: Parent
-          required: false
-          plugin_id: standard
-        reverse__node__field_topics:
-          id: reverse__node__field_topics
-          table: taxonomy_term_field_data
-          field: reverse__node__field_topics
-          relationship: none
-          group_type: group
-          admin_label: field_topics
-          required: true
-          entity_type: taxonomy_term
-          plugin_id: entity_reverse
+      relationships: {  }
       arguments: {  }
       display_extenders: {  }
       css_class: ''
-      group_by: true
+      group_by: false
     cache_metadata:
       max-age: -1
       contexts:
