POWR-630 see if a newer drush helps prevent cim errors

--- a/composer.json
+++ b/composer.json
@@ -87,7 +87,7 @@
         "drupal/views_data_export": "^1.0@beta",
         "drupal/viewsreference": "^1.2",
         "drupal/webform": "^5.0@RC",
-        "drush/drush": "9.3.0",
+        "drush/drush": "^9.5.0",
         "roave/security-advisories": "dev-master",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
