--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "drupal/console": "^1.0.2",
         "drupal/content_lock": "^1.0@alpha",
         "drupal/copyright_block": "^1.0@RC",
+        "drupal/core": "^8.6.7",
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/ds": "^3.1",
         "drupal/easy_breadcrumb": "^1.8",
