POWR-667 added site css and FA css to ckeditor

--- a/web/themes/custom/cloudy/cloudy.info.yml
+++ b/web/themes/custom/cloudy/cloudy.info.yml
@@ -8,6 +8,10 @@ base theme: classy
 libraries:
   - cloudy/global-styling
 
+ckeditor_stylesheets:
+  - css/style.css
+  - //use.fontawesome.com/releases/v5.2.0/css/all.css
+
 stylesheets-remove:
   - '@extlink/extlink.css'
 
