POWR-719 added Body Content field, restricted access to old Body field for editing, disabled old Body field in displays. Also disabled kint and devel; they should not be turned on in committed configs. There seem to be a couple extraneous config updates in here, but I started with a clean db and ran a fully merged cim on it; not sure where the extras came from but following the established process.

--- a/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
@@ -68,6 +68,7 @@ hidden:
   content_moderation_control: true
   field_all_day: true
   field_body: true
+  field_body_content: true
   field_end_date: true
   field_end_time: true
   field_event_location: true
