--- a/web/sites/default/config/core.entity_view_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.default.yml
@@ -11,7 +11,6 @@ dependencies:
   module:
     - ds
     - panelizer
-    - paragraphs
     - text
     - user
 third_party_settings:
@@ -32,7 +31,6 @@ third_party_settings:
         - content_moderation_control
         - field_summary
         - field_body_content
-        - field_body
 id: node.information.default
 targetEntityType: node
 bundle: information
@@ -41,13 +39,6 @@ content:
   content_moderation_control:
     weight: 0
     region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_body:
-    type: paragraph_summary
-    weight: 3
-    region: content
-    label: above
     settings: {  }
     third_party_settings: {  }
   field_body_content:
@@ -94,6 +85,7 @@ content:
     type: string
     region: content
 hidden:
+  field_body: true
   field_legacy_path: true
   links: true
   scheduled_publication: true
