--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -4,14 +4,15 @@ status: true
 dependencies:
   config:
     - field.field.node.news.field_body
+    - field.field.node.news.field_body_content
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
   module:
     - ds
-    - entity_reference_revisions
     - panelizer
+    - text
     - user
 third_party_settings:
   panelizer:
@@ -29,21 +30,19 @@ third_party_settings:
     regions:
       content:
         - field_summary
-        - field_body
+        - field_body_content
 id: node.news.default
 targetEntityType: node
 bundle: news
 mode: default
 content:
-  field_body:
+  field_body_content:
+    type: text_default
     weight: 1
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
     region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_summary:
     weight: 0
     label: hidden
@@ -82,6 +81,7 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_body: true
   field_legacy_path: true
   field_topics: true
   links: true
