--- a/web/sites/default/config/views.view.content.yml
+++ b/web/sites/default/config/views.view.content.yml
@@ -805,6 +805,7 @@ display:
       tags:
         - 'config:field.storage.node.field_legacy_path'
         - 'config:workflow_list'
+        - extensions
   page_1:
     display_options:
       path: admin/content/node
@@ -838,3 +839,4 @@ display:
       tags:
         - 'config:field.storage.node.field_legacy_path'
         - 'config:workflow_list'
+        - extensions
