--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.news.field_body
+    - field.field.node.news.field_body_content
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
@@ -13,6 +14,7 @@ dependencies:
     - content_moderation
     - paragraphs
     - path
+    - text
 id: node.news.default
 targetEntityType: node
 bundle: news
@@ -39,11 +41,20 @@ content:
         duplicate: duplicate
         collapse_edit_all: collapse_edit_all
         add_above: '0'
+      closed_mode_threshold: 0
     third_party_settings: {  }
     type: paragraphs
     region: content
+  field_body_content:
+    type: text_textarea
+    weight: 3
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
   field_legacy_path:
-    weight: 26
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -51,7 +62,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 2
+    weight: 1
     settings:
       rows: 2
       placeholder: ''
@@ -64,7 +75,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 3
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
