--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.event.field_all_day
     - field.field.node.event.field_body
+    - field.field.node.event.field_body_content
     - field.field.node.event.field_end_date
     - field.field.node.event.field_end_time
     - field.field.node.event.field_event_location
@@ -18,6 +19,7 @@ dependencies:
     - ds
     - entity_reference_revisions
     - panelizer
+    - text
     - time_field
     - user
 third_party_settings:
@@ -42,7 +44,7 @@ third_party_settings:
         - field_end_date
         - field_end_time
         - field_event_location
-        - field_body
+        - field_body_content
 id: node.event.default
 targetEntityType: node
 bundle: event
@@ -58,15 +60,13 @@ content:
       format_custom_false: ''
       format_custom_true: ''
     third_party_settings: {  }
-  field_body:
+  field_body_content:
+    type: text_default
     weight: 7
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
     region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_end_date:
     weight: 4
     label: hidden
@@ -156,5 +156,6 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_body: true
   field_legacy_path: true
   links: true
