--- a/web/sites/default/config/core.entity_view_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.guide.field_body
+    - field.field.node.guide.field_body_content
     - field.field.node.guide.field_legacy_path
     - field.field.node.guide.field_related_content
     - field.field.node.guide.field_reviewer
@@ -12,8 +13,8 @@ dependencies:
     - node.type.guide
   module:
     - ds
-    - entity_reference_revisions
     - panelizer
+    - text
     - user
 third_party_settings:
   panelizer:
@@ -31,21 +32,19 @@ third_party_settings:
     regions:
       content:
         - field_summary
-        - field_body
+        - field_body_content
 id: node.guide.default
 targetEntityType: node
 bundle: guide
 mode: default
 content:
-  field_body:
+  field_body_content:
+    type: text_default
     weight: 1
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
     region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_summary:
     weight: 0
     label: hidden
@@ -84,6 +83,7 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_body: true
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
