--- a/web/sites/default/config/core.entity_view_display.node.guide.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.search_result.yml
@@ -64,6 +64,7 @@ content:
 hidden:
   content_moderation_control: true
   field_body: true
+  field_body_content: true
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
