--- a/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
@@ -62,6 +62,7 @@ content:
 hidden:
   content_moderation_control: true
   field_body: true
+  field_body_content: true
   field_legacy_path: true
   field_topics: true
   links: true
