--- a/web/sites/default/config/field.storage.node.field_body.yml
+++ b/web/sites/default/config/field.storage.node.field_body.yml
@@ -4,8 +4,12 @@ status: true
 dependencies:
   module:
     - entity_reference_revisions
+    - field_permissions
     - node
     - paragraphs
+third_party_settings:
+  field_permissions:
+    permission_type: custom
 id: node.field_body
 field_name: field_body
 entity_type: node
