--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "drupal/copyright_block": "^1.0@RC",
         "drupal/core": "^8.6.7",
         "drupal/custom_add_another": "^1.0@beta",
+        "drupal/default_content": "^1.0",
         "drupal/ds": "^3.1",
         "drupal/easy_breadcrumb": "^1.8",
         "drupal/eva": "^1.3",
@@ -164,6 +165,9 @@
             },
             "drupal/menu_token": {
                 "2948260 - Tokens not substituted in query string": "https://www.drupal.org/files/issues/2018-09-21/2988939-allow-query-parameters-12.diff"
+            },
+            "drupal/easy_breadcrumb": {
+                "2979389 - Titles in breadcrumbs are 'double-escaped'": "https://www.drupal.org/files/issues/2018-07-13/2979389-9-easy-breadcrumb--double-escaped-titles.patch"
             }
         },
         "merge-plugin": {
