--- a/web/sites/default/config/field.field.node.page.field_summary.yml
+++ b/web/sites/default/config/field.field.node.page.field_summary.yml
@@ -1,24 +1,24 @@
-uuid: a8325bf9-06b5-4ecd-87a4-f2d12e876c1a
+uuid: df5e79ee-ba5b-4a35-bccd-fb4a96ce1749
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_summary
-    - node.type.city_service
+    - node.type.page
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.city_service.field_summary
+id: node.page.field_summary
 field_name: field_summary
 entity_type: node
-bundle: city_service
+bundle: page
 label: Summary
 description: 'Brief description from a community point of view that is used in search results and in social media cards.'
-required: false
-translatable: false
+required: true
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
