POWR-688 Update responsive image styles to use Cloudy breakpoints

--- a/web/sites/default/config/responsive_image.styles.paragraph_image.yml
+++ b/web/sites/default/config/responsive_image.styles.paragraph_image.yml
@@ -9,29 +9,29 @@ dependencies:
     - image.style.responsive_large
     - image.style.responsive_medium
   theme:
-    - bootstrap_barrio
+    - cloudy
 id: paragraph_image
 label: 'Paragraph image'
 image_style_mappings:
   -
-    breakpoint_id: bootstrap_barrio.extra
+    breakpoint_id: cloudy.extra
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: responsive_extra
   -
-    breakpoint_id: bootstrap_barrio.large
+    breakpoint_id: cloudy.large
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: responsive_large
   -
-    breakpoint_id: bootstrap_barrio.medium
+    breakpoint_id: cloudy.medium
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: responsive_medium
   -
-    breakpoint_id: bootstrap_barrio.small
+    breakpoint_id: cloudy.small
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: res
-breakpoint_group: bootstrap_barrio
+breakpoint_group: cloudy
 fallback_image_style: responsive_
